fixed spacing

--- a/starWars/src/app/components/header/header.component.sass
+++ b/starWars/src/app/components/header/header.component.sass
@@ -31,3 +31,5 @@
                 color: grey
                 margin: 5px
                 font-family: 'starWarsFont', sans-serif
+                &:hover
+                    color: white
